--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53,7 +53,7 @@
 /* 1.1 General */
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('bootstrap.min.css');
 @import url('bootstrap-grid.min.css');
 @import url('animate.css');
@@ -77,7 +77,7 @@ body{
   letter-spacing: 0.025em;
   line-height: 1.9428;
   color: #717171;
-  background: #1b1b1b;
+  background: #000000;
   -webkit-overflow-scrolling:touch;
 }
 
@@ -88,21 +88,21 @@ body{
 
 ::-webkit-scrollbar-thumb {
   cursor: pointer;
-  background: #c32865;
+  background: #dddddd;
 }
 
 ::selection{
-  background-color:#c32865;
+  background-color:#dddddd;
   color:#fff;
 }
 
 -webkit-::selection{
-    background-color:#c32865;
+    background-color:#dddddd;
     color:#fff;
 }
 
 ::-moz-selection{
-    background-color:#c32865;
+    background-color:#dddddd;
     color:#fff;
 }
 
@@ -226,7 +226,7 @@ blockquote{
   padding: 0;
   width: 80%;
   padding-left: 6.8rem;
-  border-left: 0.3rem solid #c32865;
+  border-left: 0.3rem solid #dddddd;
   margin-top: 5rem;
   color:#fff;
 }
@@ -240,14 +240,14 @@ cite{
 }
 
 a {
-  color:#c32865;
+  color:#dddddd;
   -webkit-transition: color .3s ease-out;
        -o-transition: color .3s ease-out;
           transition: color .3s ease-out;
 }
 
 a:hover {
-  color:#c32865;
+  color:#dddddd;
   outline: none;
 }
 
@@ -303,7 +303,7 @@ input[type='email']:focus,
 input[type="search"]:focus,
 input[type="tel"]:focus,
 textarea:focus{
-  border-color: #c32865;
+  border-color: #dddddd;
   outline: 0;
   color: #fff;
 }
@@ -358,7 +358,7 @@ label.error{
   border:0;
   border-radius: 0;
   padding: 1.1em 2.28em 1em;
-  background-color: #c32865;
+  background-color: #dddddd;
   text-decoration: none;
   -webkit-transition: all .3s ease-out!important;
           transition: all .3s ease-out!important;
@@ -377,34 +377,29 @@ label.error{
 
 /* 1.5 Icons */
 
-
-
-.icon{
+.main-icon{
   display: inline-block;
-}
-
-.ion-ios-play{
   position:relative;
-  width: 5rem;
-  height: 5rem;
+  width: 4rem;
+  height: 4rem;
   padding-left: 0.2rem;
-  line-height: 5rem;
+  line-height: 4rem;
   text-align:center;
   border:1px solid #fff;
   border-radius: 50%;
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-right:1.5rem;
   margin-top: 4rem;
   color: #fff;
   transition: all .3s ease-out;
 }
 
-.ion-ios-play:hover{
-  color: #c32865;
-  border: 1px solid #c32865;
+.main-icon:hover{
+  color: #dddddd;
+  border: 1px solid #dddddd;
 }
 
-.ion-ios-play:after {
+.main-icon:after {
   content: '';
   position: absolute;
   right: 100%;
@@ -460,7 +455,7 @@ label.error{
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #c32865;
+  background-color: #dddddd;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -506,7 +501,7 @@ label.error{
 }
 
 .text-primary{
-  color:#c32865!important;
+  color:#dddddd!important;
 }
 
 .masked{
@@ -657,7 +652,7 @@ a.brand:focus{
 }
 
 .navbar-toggle:hover .icon-bar{
-  background-color:  #c32865;
+  background-color:  #dddddd;
 }
 
 .navbar .social-list{
@@ -692,7 +687,7 @@ a.brand:focus{
 }
 
 .social-list a:hover{
-  color:#c32865;
+  color:#dddddd;
   text-decoration: none;
 }
 
@@ -793,7 +788,7 @@ a.brand:focus{
 }
 
 .close-menu:hover{
-  color: #c32865;
+  color: #dddddd;
 }
 
 .menu-list{
@@ -888,7 +883,7 @@ a.brand:focus{
 }
 
 .menu-footer .social-list a:hover{
-  color:#c32865;
+  color:#dddddd;
 }
 
 .menu-footer .copy{
@@ -1034,7 +1029,7 @@ a.brand:focus{
 #pp-nav .pp-nav-down:hover,
 #pp-nav.white .pp-nav-up:hover,
 #pp-nav.white .pp-nav-down:hover{
-  color: #c32865;
+  color: #dddddd;
 }
 
 #pp-nav.white .pp-nav-up,
@@ -1053,7 +1048,7 @@ a.brand:focus{
 
 #pp-nav li .active span, .pp-slidesNav .active span{
   opacity: 1;
-  background: #c32865;
+  background: #dddddd;
   transform:scale(1.6);
 }
 
@@ -1124,6 +1119,26 @@ a.brand:focus{
   height: 100%;
   background-size: cover;
   background-position: center;
+}
+
+.main-bg {
+  background: #000000 no-repeat;
+}
+
+.project-1-bg {
+  background: #000000 no-repeat;
+}
+
+.project-2-bg {
+  background: #000000 no-repeat;
+}
+
+.project-3-bg {
+  background: #000000 no-repeat;
+}
+
+.project-4-bg {
+  background: #000000 no-repeat;
 }
 
 .vertical-title{
@@ -1267,7 +1282,7 @@ a.brand:focus{
 
 .icon-specialization{
   font-size:5rem;
-  color:#c32865;
+  color:#dddddd;
 }
 
 .row-specialization{
@@ -1324,7 +1339,7 @@ a.brand:focus{
 }
 
 .col-resume:hover{
-  background: #c32865;
+  background: #dddddd;
 }
 
 .resume-type{
@@ -1466,7 +1481,7 @@ a.brand:focus{
 }
 
 .progress-bar{
-  background-color:#c32865;
+  background-color:#dddddd;
   height: 100%;
 }
 
@@ -1491,7 +1506,7 @@ a.brand:focus{
 
 .bg-changer .section-bg{
   opacity: 0;
-  will-change: opacity, transform;
+  will-change: auto;
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   -o-transform: scale(1);
@@ -1633,7 +1648,7 @@ a.brand:focus{
 
 
 .view-all a:hover{
-  color:#c32865;
+  color:#dddddd;
   text-decoration: none;
 }
 
@@ -1881,7 +1896,7 @@ a.brand:focus{
 }
 
 .owl-dot.active span{
-  background: #c32865;
+  background: #dddddd;
   transform:scale(1.4);
 }
 
