--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -644,12 +644,12 @@ img.svg{
 }
 .waxon_tm_button a{
 	text-decoration: none;
-	color: #fff;
-	background-color: #000;
+	color: #000000;
+	background-color: transparent;
 	padding: 13px 50px;
 	display: inline-block;
 	border-radius: 50px;
-	border: 2px solid #000;
+	border: 2px solid #000000;
 	
 	-webkit-transition: all .3s ease;
 	   -moz-transition: all .3s ease;
@@ -658,8 +658,9 @@ img.svg{
 	        transition: all .3s ease;
 }
 .waxon_tm_button a:hover{
-	background-color: transparent;
-	color: #000;
+	background-color: #000000;
+	color: #ffffff;
+	border: 2px solid #000000;
 }
 .waxon_tm_button[data-position="left"]{text-align: left;}
 .waxon_tm_button[data-position="center"]{text-align: center;}
@@ -728,7 +729,7 @@ img.svg{
 	height: auto;
 	clear: both;
 	float: left;
-	margin-bottom: 200px;
+	margin-bottom: 0px;
 	padding: 255px 0px 200px 0px;
 	background-color: #f8f9fa;
 }
@@ -907,7 +908,7 @@ img.svg{
 .waxon_tm_portoflio .portfolio_inner ul li{
 	margin: 0px 0px 90px 0px;
 	float: left;
-	width: 33.3333%;
+	width: 25%;
 	padding-left: 100px;
 }
 .waxon_tm_portoflio .portfolio_inner ul li .list_inner{
@@ -955,7 +956,7 @@ img.svg{
 .waxon_tm_portoflio .portfolio_inner ul li .list_inner .image{
 	position: relative;
 	margin-bottom: 20px;
-	border-radius: 8px;
+	border-radius: 2px;
 	overflow: hidden;
 }
 .waxon_tm_portoflio .portfolio_inner ul li .list_inner .image img{
@@ -1547,8 +1548,8 @@ body.dark .waxon_tm_partners ul.dark{display: none;}
 	height: auto;
 	clear: both;
 	float: left;
-	background-color: #000;
-	padding: 90px 0px 60px 0px;
+	background-color: #4a4a4a;
+	padding: 20px 0px 30px 0px;
 }
 .waxon_tm_copyright .copyright_inner{
 	width: 100%;
@@ -1624,11 +1625,14 @@ body.dark .waxon_tm_partners ul.dark{display: none;}
 	transform: translateY(-100%);
 }
 .waxon_tm_copyright .copyright_inner .social .svg{
-	color: #fff;
+	color: #ffffff;
 	width: 17px;
 	height: 17px;
 }
 
+.waxon_tm_copyright .copyright_inner .social .svg svg{
+	fill: #ffffff
+}
 
 
 
